# gb-presenter-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
sameboy/: Cargo.toml
sameboy-sys/: Cargo.toml  README.md  build.rs  rs-wrapper.h
sameboy-sys/src/: lib.rs
sameboy/src/: lib.rs
sameboy/src/gameboy/: audio.rs  direct_access.rs  gbs_info.rs  inner.rs  joypad.rs  memory.rs  mod.rs  model.rs  rtc.rs  save_state.rs  sgb.rs  video.rs
sameboy/src/gameboy/bootrom/: mod.rs
sameboy/src/gameboy/cartridge/: accelerometer.rs  alarm.rs  camera.rs  mod.rs  rumble.rs
sameboy/src/gameboy/link/: mod.rs  printer.rs  workboy.rs  workboy_key.rs
src/: cli.rs  config.rs  main.rs
src/gui/: mod.rs  render_thread.rs
src/gui/slint/: channel-config.slint  color-picker.slint  main.slint  toolbar-button.slint
src/renderer/: gbs.rs  lsdj.rs  m3u_searcher.rs  mod.rs  render_options.rs
src/renderer/lsdj/: end_detector.rs  mod.rs  save_file.rs
src/renderer/vgm/: LICENSE-pegmode-driver  converter.rs  gd3.rs  mod.rs  patch_rom.gb  vgm.rs
src/video_builder/: encoding.rs  ffmpeg_hacks.rs  mod.rs  vb_unwrap.rs  video_options.rs
src/video_builder/backgrounds/: debug_bg.rs  image_bg.rs  mod.rs  video_bg.rs
src/visualizer/: channel_settings.rs  filters.rs  mod.rs  oscilloscope.rs  piano_roll.rs  tile_map.rs
