[package]
name = "gb-presenter-rs"
version = "0.6.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
sameboy = { path = "sameboy", default-features = false, features = ["include-bootroms"] }
tiny-skia = "0.11.2"
image = "0.24"
ringbuf = "0.3.3"
ffmpeg-next = "6.0"
ffmpeg-sys-next = "6.0"
slint = "1.3.0"
native-dialog = "0.7.0"
indicatif = "0.17.7"
clap = "4.4.8"
encoding_rs = "0.8.33"
glob = "0.3.1"
anyhow = "1.0"
csscolorparser = { version = "0.6.2", features = ["serde"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
slint-build = "1.3.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
