[package]
name = "sameboy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sameboy"

[dependencies]
sameboy-sys = { path = "../sameboy-sys" }
encoding_rs = "0.8.32"
anyhow = "1.0"
image = { version = "0.24", optional = true }

[features]
default = ["include-bootroms", "thread-safety"]
include-bootroms = []
thread-safety = ["sameboy-sys/thread-safety"]
